myHelm/templates/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - image: griffire/lab4-gateway
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
#      restartPolicy: OnFailure
status: {}
