myHelm/templates/loyalty-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: loyalty
  name: loyalty
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loyalty
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: loyalty
    spec:
      containers:
        - image: griffire/lab4-loyalty
          name: loyalty
          ports:
            - containerPort: 8050
          resources: {}
#      restartPolicy: OnFailure
status: {}
