myHelm/templates/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: payment
  name: payment
spec:
  ports:
    - name: "8060"
      port: 8060
      targetPort: 8060
  selector:
    io.kompose.service: payment
status:
  loadBalancer: {}
